Resolves: fdo#61373 tabs too narrow under oxygen gtk theme

Change-Id: I794b34c1864f619d91f0b105ba08a4f607abd291